--- a/src/app/pages/sku-management/product-cashier/create/create.component.html
+++ b/src/app/pages/sku-management/product-cashier/create/create.component.html
@@ -46,7 +46,7 @@
             (click)="openDialog()"
           >
             <mat-icon class="secondary-text">horizontal_split</mat-icon>
-            <span class="h5 text-center">SCAN BARCODE</span>
+            <span class="h5 text-center">{{'manajemen_barang_sku.produk_kasir.text11' | translate}}</span>
           </div>
           <mat-form-field *ngIf="!hasBarcode" fxFlex="100" class="is-light">
             <input matInput disabled placeholder="Nama Produk" />
