--- a/src/app/pages/user-management/private-label/panel-partnership/create/panel-partnership-create.component.html
+++ b/src/app/pages/user-management/private-label/panel-partnership/create/panel-partnership-create.component.html
@@ -143,7 +143,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="12%" class="is-light form-primary">
                 <mat-select
-                  placeholder="{{'global.area.salespoint' | translate}}"rea.salespoint' | translate}}"
+                  placeholder="{{'global.area.salespoint' | translate}}"
                   formControlName="salespoint"
                   multiple
                 >
