--- a/src/app/pages/dte/pengaturan-attribute-misi/index/copywriting/copywriting.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/copywriting/copywriting.component.html
@@ -13,7 +13,7 @@
       fxLayoutAlign="space-between center"
       class="top-table pt-8"
     >
-      <h2 class="pl-8">Copywriting</h2>
+      <h2 class="pl-8">{{'dte.template_tugas.copywriting' | translate}}</h2>
       <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
         <mat-icon>search</mat-icon>
         <mat-form-field class="is-light tab-search">
