--- a/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
+++ b/src/app/pages/dte/pengaturan-attribute-misi/index/pengaturan-attribute-misi-index.component.html
@@ -22,12 +22,12 @@
         </mat-tab>
 
         <!-- TINGKAT internal MISI -->
-        <mat-tab label="Internal Kategori">
+        <mat-tab label="{{'dte.pengaturan_attribute_misi.text4' | translate}}">
           <app-list-internal-misi></app-list-internal-misi>
         </mat-tab>
 
         <!-- KETEGORI MISI -->
-        <mat-tab label="Kategori Misi">
+        <mat-tab label="{{'dte.pengaturan_attribute_misi.text5' | translate}}">
           <app-list-kategori-misi></app-list-kategori-misi>
         </mat-tab>
         <!-- Project -->
@@ -41,7 +41,7 @@
         </mat-tab>
 
         <!-- Copywriting -->
-        <mat-tab label="Copywriting">
+        <mat-tab label="{{'dte.template_tugas.copywriting' | translate}}">
           <app-copywriting></app-copywriting>
         </mat-tab>
       </mat-tab-group>
