--- a/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.html
+++ b/src/app/pages/dte/task-verification/dialog/confirm-dialog-tsm/confirm-dialog-tsm.component.html
@@ -225,7 +225,7 @@
                 <table class="table">
                   <thead>
                     <tr>
-                      <th nowrap>Product Name</th>
+                      <th nowrap>{{'katalog_src.produk.text15' | translate}}</th>
                       <th nowrap>Qty</th>
                     </tr>
                   </thead>
