--- a/src/app/pages/dte/task-verification/index-tsm/task-verification-index-tsm.component.html
+++ b/src/app/pages/dte/task-verification/index-tsm/task-verification-index-tsm.component.html
@@ -79,7 +79,7 @@
     prop="task_sequencing_management_template_name" [flexGrow]="3">
   </ngx-datatable-column>
 
-  <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Lain Misi/Template Tugas"
+  <ngx-datatable-column [width]="190" [sortable]="false" name="{{'dte.template_tugas.text6' | translate}}/Template Tugas"
     prop="task_sequencing_management_template_other_name" [flexGrow]="3">
   </ngx-datatable-column>
 
