--- a/src/app/pages/dte/task-verification/index/task-verification-index.component.html
+++ b/src/app/pages/dte/task-verification/index/task-verification-index.component.html
@@ -92,7 +92,7 @@
               [flexGrow]="3">
             </ngx-datatable-column>
 
-            <ngx-datatable-column [width]="190" [sortable]="false" name="Nama Lain Misi/Template Tugas"
+            <ngx-datatable-column [width]="190" [sortable]="false" name="{{'dte.template_tugas.text6' | translate}}/Template Tugas"
               prop="other_name_template" [flexGrow]="3">
             </ngx-datatable-column>
 
