--- a/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
+++ b/src/app/pages/notification/create/custom-notification/import/import-custom-notification.component.html
@@ -41,8 +41,8 @@
             <th nowrap>Target User</th>
             <th nowrap>Header Notification</th>
             <th nowrap>Content Notification</th>
-            <th nowrap>Nama Halaman</th>
-            <th nowrap>Isi Halaman</th>
+            <th nowrap>{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}</th>
+            <th nowrap>{{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}}</th>
             <th nowrap>{{ls.locale.global.messages.invalid_reason}}</th>
           </tr>
         </thead>
