--- a/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
+++ b/src/app/pages/popup-notification/edit/popup-notification-edit.component.html
@@ -202,7 +202,7 @@
                     role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span
                       class="preview-image-content" (click)="previewImage(imageConverted)">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}} popup
                       notifikasi</span>
-                    <mat-icon (click)="removeImage()" matTooltip="Hapus gambar"
+                    <mat-icon (click)="removeImage()" matTooltip="{{'global.label.delete_image' | translate}}"
                       class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                       matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
                   </div>
