--- a/src/app/pages/user-management/field-force/create/field-force-create.component.html
+++ b/src/app/pages/user-management/field-force/create/field-force-create.component.html
@@ -77,7 +77,7 @@
 
         <mat-step>
 
-          <ng-template matStepLabel>Selesai</ng-template>
+          <ng-template matStepLabel>{{'global.button.finish' | translate}}</ng-template>
 
           <div class="h2" fxLayout="row" fxLayoutAlign="center center">
             Apakah anda yakin untuk menyelesaikan isian ini ?
