--- a/src/app/pages/inapp-marketing/landing-page/create/landing-page-create.component.html
+++ b/src/app/pages/inapp-marketing/landing-page/create/landing-page-create.component.html
@@ -29,18 +29,18 @@
           </div> -->
           <div fxLayout="row">
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <input matInput type="text" formControlName="title" placeholder="Nama Halaman">
+              <input matInput type="text" formControlName="title" placeholder="{{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}}">
               <mat-error *ngIf="formPageGroup.controls['title'].hasError('required') && formPageGroup.controls['title'].touched">
-                Nama Halaman harus diisi
+                {{'iklan_dalam_aplikasi.spanduk_online.text23' | translate}} harus diisi
               </mat-error>
             </mat-form-field>
           </div>
           <div class="pt-8" fxLayout="row" fxLayoutAlign="start center">
-            <h3 class="">Isi Halaman</h3>
+            <h3 class="">{{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}}</h3>
           </div>
           <textarea [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
           <mat-error style="padding-top: 6px !important; font-size: .86em;" *ngIf="formPageGroup.controls['body'].hasError('required') && formPageGroup.controls['body'].touched">
-            Isi Halaman harus diisi
+            {{'iklan_dalam_aplikasi.spanduk_online.text24' | translate}} harus diisi
           </mat-error>
 
           <div class="pt-48 pb-16">
