--- a/src/app/pages/popup-notification/create/popup-notification-create.component.html
+++ b/src/app/pages/popup-notification/create/popup-notification-create.component.html
@@ -201,7 +201,7 @@
                   <div class="mat-chip mat-primary mat-standard-chip mat-chip-with-trailing-icon ng-star-inserted"
                     role="option" tabindex="-1" aria-disabled="false" aria-selected="false"><span
                       class="preview-image-content" (click)="previewImage(imageConverted)">{{'iklan_dalam_aplikasi.spanduk_online.view_image' | translate}} popup notifikasi</span>
-                    <mat-icon (click)="removeImage()" matTooltip="Hapus gambar"
+                    <mat-icon (click)="removeImage()" matTooltip="{{'global.label.delete_image' | translate}}"
                       class="mat-chip-remove mat-chip-trailing-icon mat-icon material-icons mat-icon-no-color ng-star-inserted"
                       matchipremove="" role="img" aria-hidden="true">cancel</mat-icon>
                   </div>
