--- a/src/app/pages/dte/trade/create/trade-create.component.html
+++ b/src/app/pages/dte/trade/create/trade-create.component.html
@@ -1,13 +1,13 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Buat Trade Program'"></page-content-header>
+  <page-content-header contentTitle="{{'dte.trade_program.text2' | translate}}"></page-content-header>
   <!-- / HEADER -->
 
   <div class="content p-24">
     <div class="ayo-main-wrapper mat-white-bg" fxLayout="column">
       <form autocomplete="off" [formGroup]="formTradeProgram" (keydown.enter)="$event.preventDefault();">
         <div fxLayout="row" fxLayoutAlign="space-between center">
-          <h2 class="">Buat Trade Program</h2>
+          <h2 class="">{{'dte.trade_program.text2' | translate}}</h2>
           <div>
             <mat-form-field
               [class]="formTradeProgram.get('status').value === 'publish' ? 'radius-select green' : 'radius-select red'">
@@ -24,9 +24,9 @@
             <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
               <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
               <br>
-              <span matPrefix>Tarik gambar Anda kesini /
-                <strong>Pilih File</strong> berdimensi 410p x 210p.</span>
-              <span matPrefix>Besar file maksimal 2mb</span>
+              <span matPrefix>
+                <strong>{{'dte.group_trade_program.text11' | translate}}</strong> {{'dte.group_trade_program.text12' | translate}}</span>
+              <span matPrefix>{{'dte.group_trade_program.text13' | translate}}</span>
             </div>
           </div>
           <div class="py-48">
@@ -44,9 +44,9 @@
               <!-- <mat-select formControlName="group_trade_program" placeholder="Group Trade Program">
                 <mat-option *ngFor="let item of listGroupTradeProgram" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select formControlName="group_trade_program" placeholder="Group Trade Program" #singleSelect>
-                <ngx-mat-select-search [formControl]="filterGTP" [placeholderLabel]="'Cari Group Trade Program...'"
-                  [noEntriesFoundLabel]="'Tidak ada Group Trade Program yang ditemukan'"></ngx-mat-select-search>
+              <mat-select formControlName="group_trade_program" placeholder="{{'dte.group_trade_program.text1' | translate}}" #singleSelect>
+                <ngx-mat-select-search [formControl]="filterGTP" placeholderLabel="{{'global.label.search' | translate}} {{'dte.group_trade_program.text1' | translate}}..."
+                  noEntriesFoundLabel="{{'dte.trade_program.group_trade_program_not_found' | translate}}"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
                   {{item.name}}
                 </mat-option>
@@ -55,10 +55,10 @@
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
-              <input matInput type="text" formControlName="name" placeholder="Nama Trade Program">
+              <input matInput type="text" formControlName="name" placeholder="{{'dte.trade_program.text3' | translate}}">
               <mat-error
                 *ngIf="formTradeProgram.controls['name'].hasError('required') && formTradeProgram.controls['name'].touched">
-                Nama Trade Program harus diisi
+                {{'dte.trade_program.text3' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
           </div>
@@ -73,7 +73,7 @@
               <mat-datepicker #startDate></mat-datepicker>
               <mat-error
                 *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
-                {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} harus diisi
+                {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
 
@@ -86,34 +86,34 @@
               <mat-datepicker #endDate></mat-datepicker>
               <mat-error
                 *ngIf="formTradeProgram.controls['start_date'].hasError('required') && formTradeProgram.controls['start_date'].touched">
-                {{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} harus diisi
+                {{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
-              <input matInput type="text" [mask]="ls.locale.global.input_mask" [thousandSeparator]="ls.locale.global.input_separator" min="0" formControlName="budget" placeholder="Dana Trade Program">
+              <input matInput type="text" [mask]="ls.locale.global.input_mask" [thousandSeparator]="ls.locale.global.input_separator" min="0" formControlName="budget" placeholder="{{'dte.trade_program.text4' | translate}}">
               <mat-error
                 *ngIf="formTradeProgram.controls['budget'].hasError('required') && formTradeProgram.controls['budget'].touched">
-                Dana Trade Program harus diisi
+                {{'dte.trade_program.text4' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
               <mat-error
                 *ngIf="formTradeProgram.controls['budget'].hasError('min') && formTradeProgram.controls['budget'].touched">
-                Dana Trade Program tidak boleh kurang dari 0
+                {{'dte.trade_program.text4' | translate}} {{'iklan_dalam_aplikasi.spanduk_online.cannot_less_than' | translate}} 0
               </mat-error>
             </mat-form-field>
           </div>
           <div fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="60px" fxLayoutGap.lt-md="0px">
             <mat-form-field fxFlex="47%" class="is-light form-primary">
               <input matInput formControlName="coin_expiry_date" [matDatepicker]="dp" (focus)="dp.open()"
-                placeholder="Tanggal Kadaluarsa Coin Trade Program" [min]="minExpireDate">
+                placeholder="{{'dte.trade_program.text5' | translate}}" [min]="minExpireDate">
               <mat-datepicker-toggle matSuffix [for]="dp">
                 <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
               </mat-datepicker-toggle>
               <mat-datepicker #dp></mat-datepicker>
               <mat-error
                 *ngIf="formTradeProgram.controls['coin_expiry_date'].hasError('required') && formTradeProgram.controls['coin_expiry_date'].touched">
-                Tanggal Kadaluarsa Coin Trade Program harus diisi
+                {{'dte.trade_program.text5' | translate}} {{'global.messages.mandatory_text' | translate}}
               </mat-error>
             </mat-form-field>
           </div>
