--- a/src/app/pages/dte/trade/index/trade-index.component.html
+++ b/src/app/pages/dte/trade/index/trade-index.component.html
@@ -1,8 +1,8 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
-  <page-content-header [contentTitle]="'Trade Program'">
+  <page-content-header contentTitle="{{'dte.trade_program.text1' | translate}}">
     <button id="btn-create-trade" style="width: 170px" [routerLink]="['/dte','trade-program', 'create']" mat-raised-button type="button">
-      <mat-icon>add</mat-icon> BUAT
+      <mat-icon>add</mat-icon> {{'global.button.create' | translate}}
     </button>
   </page-content-header>
   <!-- / HEADER -->
@@ -10,7 +10,7 @@
   <div class="content p-24" *ngIf="!onLoad">
     <div class="table-wrapper">
       <div fxLayout="row" fxLayoutAlign="space-between center" class="top-table pt-8">
-        <h2 class="pl-8">Trade Program</h2>
+        <h2 class="pl-8">{{'dte.trade_program.text1' | translate}}</h2>
         <div class="search-field" fxLayout="row" fxLayoutAlign="center center">
           <mat-icon>search</mat-icon>
           <mat-form-field class="is-light tab-search">
@@ -137,7 +137,7 @@
             <div class="name-container">
               <p id="status" class="status text-truncate h6 p-4 status-order" style="text-transform: uppercase;"
                 [ngClass]="row.status_publish === 'publish' ? 'mat-green-800-bg' : 'mat-red-900-bg'">
-                {{row.status_publish === 'publish' ? 'Diterbitkan' : 'Tidak Diterbitkan'}}
+                {{row.status_publish === 'publish' ? ('dte.trade_program.text6' | translate) : ('dte.trade_program.text7' | translate) }}
               </p>
             </div>
           </ng-template>
@@ -152,7 +152,7 @@
               <button id="btn-edit" mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
-              <button id="btn-delete" mat-icon-button color="primary" matTooltip="Hapus"
+              <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
                 [disabled]="row.status === 'active' || !permission?.hapus" (click)="deleteTp(row.id)">
                 <mat-icon>delete</mat-icon>
               </button>
